--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Login">
-        <activity android:name=".BigCoverActivity"></activity>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".BigCoverActivity" />
         <activity android:name=".DetailActivity" />
         <activity
             android:name=".login.view.RegisterActivity"
