--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Login">
-        <activity android:name=".home.view.DetailActivity"></activity>
+        <activity android:name=".home.view.FullCoverActivity"></activity>
+        <activity android:name=".home.view.DetailActivity" />
         <activity android:name=".home.view.HomeActivity" />
         <activity android:name=".MainActivity" />
         <activity
